<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llProcArgsSettings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="7dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/lime"
        android:text="@string/psCommandArguments"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:padding="6dp" />
    <CheckBox
        android:id="@+id/cbxArgT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="-t"
        android:buttonTint="@color/lime"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/t_arg"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"/>
    <CheckBox
        android:id="@+id/cbxArgX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="-x"
        android:buttonTint="@color/lime"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/x_arg"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"/>
    <CheckBox
        android:id="@+id/cbxArgP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="-p"
        android:buttonTint="@color/lime"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/p_arg"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"/>
    <CheckBox
        android:id="@+id/cbxArgC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="-c"
        android:buttonTint="@color/lime"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/c_arg"
        android:textColor="@android:color/darker_gray"
        android:textStyle="italic"/>
    <ImageButton
        android:id="@+id/btnSettingsInfo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/info1"
        android:background="@drawable/info1"
        android:scaleType="fitCenter" />
</LinearLayout>