<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray2">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp">
            <TextView
                android:id="@+id/txvProjectInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                android:background="@color/transparent_gray" />
            <TextView
                android:id="@+id/txvProjectDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txvProjectInfo"
                android:layout_marginTop="5dp"
                android:fontFamily="monospace"
                android:textColor="@color/gray3"
                android:text="@string/desc_long"
                android:gravity="center"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/txvOpenSourceLicences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txvProjectDesc"
                android:layout_marginTop="5dp"
                android:fontFamily="monospace"
                android:textColor="@android:color/white"
                android:text="@string/open_source_licence"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/transparent_lightGray"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/txvLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/gray3"
                android:gravity="center"
                android:layout_below="@+id/txvOpenSourceLicences"
                android:text="@string/gnu_license"
                android:fontFamily="monospace"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/txvCredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/credit"
                android:gravity="center"
                android:layout_marginTop="7dp"
                android:fontFamily="monospace"
                android:textSize="17sp"
                android:textStyle="normal|bold"
                android:background="@color/transparent_lightGray"
                android:layout_below="@+id/txvLicense"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>