<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tht.psaux.MainActivity"
    android:background="@android:color/black">
    <RelativeLayout
        android:id="@+id/rlMainButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp">
        <Button
            android:id="@+id/btnProc"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/button_border"
            android:textColor="@android:color/white"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:layout_toStartOf="@+id/viewSplitter"
            android:layout_alignParentStart="true"
            android:textColorHighlight="@color/colorAccent"
            android:fontFamily="monospace"/>
        <View
            android:id="@+id/viewSplitter"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>
        <Button
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/button_border"
            android:textColor="@android:color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:layout_toEndOf="@+id/viewSplitter"
            android:fontFamily="monospace"
            android:textColorHighlight="@color/colorAccent"
            android:layout_toStartOf="@+id/btnSearch"/>
        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="2dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_border"
            android:src="@drawable/search4"
            android:scaleType="fitCenter"
            android:padding="8dp"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/edtxSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlMainButtons"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/searchHint"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="14sp"
        android:textColor="@color/lime"
        android:padding="10dp"
        android:layout_toStartOf="@+id/btnCloseSearch"/>
    <ImageButton
        android:id="@+id/btnCloseSearch"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/x1"
        android:background="@drawable/button_border"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:scaleType="fitCenter"
        android:layout_below="@id/rlMainButtons"
        android:padding="10dp"
        android:layout_marginEnd="4dp"/>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edtxSearch"
        android:layout_marginTop="5dp">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>
