<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#101010"
    android:descendantFocusability="blocksDescendants">
    
    <ImageView
        android:id="@+id/imgPPic"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/txvPUserLabel"
        android:text="@string/USER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/imgPPic"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"/>
    <TextView
        android:id="@+id/txvPUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/txvPUserLabel"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp" />
    <TextView
        android:id="@+id/txvPPidLabel"
        android:text="PID:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/imgPPic"
        android:layout_below="@+id/txvPUser"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPPid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/txvPUserLabel"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/txvPUser"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/txvPNameLabel"
        android:text="@string/NAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imgPPic"/>
    <TextView
        android:id="@+id/txvPName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_toEndOf="@+id/txvPNameLabel"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imgPPic" />
    
    <TextView
        android:id="@+id/txvPPpidLabel"
        android:text="PPID:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPPpid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPName"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/txvPPpidLabel"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPVsizeLabel"
        android:text="VSIZE:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPPpid"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPVsize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPPpid"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/txvPVsizeLabel"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPRssLabel"
        android:text="RSS:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPVsize"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPRss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPVsize"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/txvPRssLabel"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPCpuLabel"
        android:text="CPU:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPRss"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/txvPCpu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPRss"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/txvPCpuLabel"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/txvPWchanLabel"
        android:text="WCHAN:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPCpu"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPWchan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPCpu"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/txvPWchanLabel"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPPclabel"
        android:text="PC:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00FF00"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPWchan"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txvPPc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_below="@+id/txvPWchan"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/txvPPclabel"
        android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:id="@+id/llPButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_below="@+id/txvPPc"
            android:layout_marginTop="15dp">
            <Button
                android:id="@+id/btnKillProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kill"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textAllCaps="false"
                android:layout_toStartOf="@+id/layoutBtnSplitter"
                android:fontFamily="monospace"
                android:textStyle="bold" />
            <View
                android:id="@+id/layoutBtnSplitter"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"/>
            <Button
                android:id="@+id/btnSetService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autoKill"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:textAllCaps="false"
                android:fontFamily="monospace"
                android:textStyle="bold"
                android:layout_toEndOf="@+id/layoutBtnSplitter" />
        </RelativeLayout>




</RelativeLayout>